--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -4,7 +4,7 @@ before:
   hooks:
     - go mod tidy
     - go mod download
-    - go generate ./...
+    #- go generate ./...
 
 builds:
 - id: kform
