updated go releaser

--- a/.github/workflows/goreleaser-ci.yml
+++ b/.github/workflows/goreleaser-ci.yml
@@ -2,9 +2,9 @@
 name: goreleaser ci
 on:
   workflow_dispatch:
-  #push:
-  #  tags:
-  #    - v*
+  push:
+    tags:
+      - v*
 jobs:
   build:
     permissions: write-all
