--- a/pkg/inventory/client/testfiles/inv2.yaml
+++ b/pkg/inventory/client/testfiles/inv2.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 data:
   providers: |
     prov1: |
-      apiVersion: kubernetes.provider.kform.io/v1alpha1
+      apiVersion: kubernetes.provider.kform.dev/v1alpha1
       kind: ProviderConfig
       metadata:
         name: kubernetes
