--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,16 @@
+# Copyright 2024 Nokia
+# Licensed under the Apache License 2.0
+# SPDX-License-Identifier: Apache-2.0
 ---
 name: goreleaser ci
 on:
   push:
+#    branches:
+#      - main
     tags:
       - v*
+  pull_request:
+  workflow_dispatch:
 jobs:
   build:
     permissions: write-all
@@ -20,7 +27,7 @@ jobs:
         with:
           go-version-file: go.mod
       - name: run go releaser
-        uses: goreleaser/goreleaser-action@v5.0.0
+        uses: goreleaser/goreleaser-action@v5.1.0
         with:
           version: latest
           args: release --clean
